jsonschemadsl2ecore.trafo.opt/test/test39/validtests/example9.test39
{
	"family":{
		"personalInfo":{
			 "name":"john",
			"surname":"doe"
		},
		"professionalInfo":{
			"job":"engineer",
			"level":1
		},
		"mother":"Peppina",
		"grandparent":"peppinella"
	},
	"telephone":"05040404",
	"country":"Italia"
}