jsonschemadsl2ecore.trafo.opt/test/test39/invalidtests/example3.test39
{
	"family":{
		"personalInfo":{
			 "name":"john",
			"surname":"doe"
		},
		"professionalInfo":{
			
			"level":1
		}
	},
	"email":"ale.ale@ale.ale"
}